--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <script src="https://checkout.razorpay.com/v2/checkout.js"></script>
     <script>
       // Add an event listener to the entire document
       document.addEventListener("contextmenu", function (e) {
-        e.preventDefault(); // Prevent the default context menu from appearing
+        e.preventDefault(); 
       });
     </script>
   </body>
